// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inset text matches the InsetText snapshot: inset text 1`] = `
.emotion-2 {
  margin-bottom: 15px;
  box-sizing: border-box;
  border-left-style: solid;
  border-left-width: 10px;
  border-color: #bfc1c3;
  padding: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-2 {
    margin-bottom: 15px;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  margin: 0;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
  box-sizing: border-box;
  border-left-style: solid;
  border-left-width: 10px;
  border-color: #bfc1c3;
  padding: 15px;
}

.emotion-0 > p {
  margin: 0;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    margin-bottom: 15px;
  }
}

<_default>
  <InsetText
    isNarrow={false}
  >
    <Styled(Paragraph)
      isNarrow={false}
      mb="3"
    >
      <Paragraph
        className="emotion-2"
        isNarrow={false}
        mb="3"
        supportingText={false}
      >
        <Styled(ReactMarkdown)
          allowedTypes={
            Array [
              "paragraph",
              "emphasis",
              "strong",
              "link",
            ]
          }
          className="emotion-2"
          escapeHtml={false}
          isNarrow={false}
          mb="3"
          renderers={
            Object {
              "link": [Function],
            }
          }
          skipHtml={true}
          source="It can take up to 8 weeks to register a lasting power of attorney if there are no mistakes in the application."
          supportingText={false}
        >
          <ReactMarkdown
            allowedTypes={
              Array [
                "paragraph",
                "emphasis",
                "strong",
                "link",
              ]
            }
            astPlugins={Array []}
            className="emotion-0"
            escapeHtml={false}
            isNarrow={false}
            mb="3"
            plugins={Array []}
            rawSourcePos={false}
            renderers={
              Object {
                "link": [Function],
              }
            }
            skipHtml={true}
            source="It can take up to 8 weeks to register a lasting power of attorney if there are no mistakes in the application."
            sourcePos={false}
            supportingText={false}
            transformLinkUri={[Function]}
          >
            <div
              className="emotion-0"
              key="root-1-1"
            >
              <p
                key="paragraph-1-1"
              >
                It can take up to 8 weeks to register a lasting power of attorney if there are no mistakes in the application.
              </p>
            </div>
          </ReactMarkdown>
        </Styled(ReactMarkdown)>
      </Paragraph>
    </Styled(Paragraph)>
  </InsetText>
</_default>
`;

exports[`inset text matches the InsetTextNarrowBorder snapshot: inset text narrow border 1`] = `
.emotion-2 {
  margin-bottom: 15px;
  box-sizing: border-box;
  border-left-style: solid;
  border-left-width: 5px;
  border-color: #bfc1c3;
  padding: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-2 {
    margin-bottom: 15px;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  margin: 0;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
  box-sizing: border-box;
  border-left-style: solid;
  border-left-width: 5px;
  border-color: #bfc1c3;
  padding: 15px;
}

.emotion-0 > p {
  margin: 0;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    margin-bottom: 15px;
  }
}

<InsetTextNarrowBorder>
  <InsetText
    isNarrow={true}
  >
    <Styled(Paragraph)
      isNarrow={true}
      mb="3"
    >
      <Paragraph
        className="emotion-2"
        isNarrow={true}
        mb="3"
        supportingText={false}
      >
        <Styled(ReactMarkdown)
          allowedTypes={
            Array [
              "paragraph",
              "emphasis",
              "strong",
              "link",
            ]
          }
          className="emotion-2"
          escapeHtml={false}
          isNarrow={true}
          mb="3"
          renderers={
            Object {
              "link": [Function],
            }
          }
          skipHtml={true}
          source="It can take up to 8 weeks to register a lasting power of attorney if there are no mistakes in the application."
          supportingText={false}
        >
          <ReactMarkdown
            allowedTypes={
              Array [
                "paragraph",
                "emphasis",
                "strong",
                "link",
              ]
            }
            astPlugins={Array []}
            className="emotion-0"
            escapeHtml={false}
            isNarrow={true}
            mb="3"
            plugins={Array []}
            rawSourcePos={false}
            renderers={
              Object {
                "link": [Function],
              }
            }
            skipHtml={true}
            source="It can take up to 8 weeks to register a lasting power of attorney if there are no mistakes in the application."
            sourcePos={false}
            supportingText={false}
            transformLinkUri={[Function]}
          >
            <div
              className="emotion-0"
              key="root-1-1"
            >
              <p
                key="paragraph-1-1"
              >
                It can take up to 8 weeks to register a lasting power of attorney if there are no mistakes in the application.
              </p>
            </div>
          </ReactMarkdown>
        </Styled(ReactMarkdown)>
      </Paragraph>
    </Styled(Paragraph)>
  </InsetText>
</InsetTextNarrowBorder>
`;
